--- a/requirements.txt
+++ b/requirements.txt
@@ -16,13 +16,13 @@ folium==0.12.1
 # geopandas==0.8.2
 hyperlink==21.0.0
 idna==2.10
-incremental==17.5.0
+incremental==21.3.0  # 17.5.0
 itemadapter==0.2.0
 itemloaders==1.0.4
 jdcal==1.4.1
 Jinja2==2.11.2
 jmespath==0.10.0
-lxml==4.6.2
+# lxml==4.6.2
 MarkupSafe==1.1.1
 munch==2.5.0
 numpy==1.19.5
@@ -36,7 +36,7 @@ pycparser==2.20
 PyDispatcher==2.0.5
 PyHamcrest==2.0.2
 pyOpenSSL==20.0.1
-pyproj==3.0.0.post1
+# pyproj==3.0.0.post1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2020.5
@@ -45,7 +45,7 @@ requests==2.25.1
 scraper==0.1.0
 Scrapy==2.4.1
 service-identity==18.1.0
-Shapely==1.7.1
+# Shapely==1.7.1
 six==1.15.0
 tqdm==4.56.0
 twisted==22.4.0
