--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,55 @@
-attrs==20.3.0
-Automat==20.2.0
-branca==0.4.2
-certifi==2020.12.5
-cffi==1.14.4
-chardet==4.0.0
-click==7.1.2
-click-plugins==1.1.1
-cligj==0.7.1
-constantly==15.1.0
-cryptography==3.3.1
-cssselect==1.1.0
-et-xmlfile==1.0.1
+# attrs==20.3.0
+# Automat==20.2.0
+# branca==0.4.2
+# certifi==2020.12.5
+# cffi==1.14.4
+# chardet==4.0.0
+# click==7.1.2
+# click-plugins==1.1.1
+# cligj==0.7.1
+# constantly==15.1.0
+# cryptography==3.3.1
+# cssselect==1.1.0
+# et-xmlfile==1.0.1
 # Fiona==1.8.18
 folium==0.12.1
 # geopandas==0.8.2
-hyperlink==21.0.0
-idna==2.10
-incremental==21.3.0  # 17.5.0
-itemadapter==0.2.0
-itemloaders==1.0.4
-jdcal==1.4.1
-Jinja2==2.11.2
-jmespath==0.10.0
+# hyperlink==21.0.0
+# idna==2.10
+# incremental==21.3.0  # 17.5.0
+# itemadapter==0.2.0
+# itemloaders==1.0.4
+# jdcal==1.4.1
+# Jinja2==2.11.2
+# jmespath==0.10.0
 # lxml==4.6.2
-MarkupSafe==1.1.1
-munch==2.5.0
-numpy==1.19.5
+# MarkupSafe==1.1.1
+# munch==2.5.0
+numpy==1.22.4
 openpyxl==3.0.6
-pandas==1.2.0
+pandas==1.4.2
 parsel==1.6.0
-Protego==0.1.16
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-PyDispatcher==2.0.5
-PyHamcrest==2.0.2
-pyOpenSSL==20.0.1
+# Protego==0.1.16
+# pyasn1==0.4.8
+# pyasn1-modules==0.2.8
+# pycparser==2.20
+# PyDispatcher==2.0.5
+# PyHamcrest==2.0.2
+# pyOpenSSL==20.0.1
 # pyproj==3.0.0.post1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
-pytz==2020.5
+# pytz==2020.5
 queuelib==1.5.0
 requests==2.25.1
-scraper==0.1.0
-Scrapy==2.4.1
-service-identity==18.1.0
+# scraper==0.1.0
+# Scrapy==2.4.1
+# service-identity==18.1.0
 # Shapely==1.7.1
-six==1.15.0
+# six==1.15.0
 tqdm==4.56.0
-twisted==22.4.0
+# twisted==22.4.0
 urllib3==1.26.2
-w3lib==1.22.0
-xlrd==2.0.1
-zope.interface==5.2.0
+# w3lib==1.22.0
+# xlrd==2.0.1
+# zope.interface==5.2.0
